--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python-telegram-bot = {extras = ["job-queue"], version = "^21.7"}
 click = "^8.1.7"
 olas-operate-middleware = "^0.11.4"
 pytz = "^2025.2"
-aiohttp = "^3.11.11"
+aiohttp = "3.9.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
